--- a/src/SwRast/CMakeLists.txt
+++ b/src/SwRast/CMakeLists.txt
@@ -41,7 +41,7 @@ target_include_directories(SwRast PRIVATE ${Stb_INCLUDE_DIR})
 
 
 if (CMAKE_CXX_COMPILER_ID STREQUAL "Clang")
-    target_compile_options(SwRast PRIVATE "-march=native" "-ffast-math" "-Wall" "-Wno-unused")
+    target_compile_options(SwRast PRIVATE "-march=native" "-ffast-math" "-Wno-unused" "-Wsign-conversion")
 else()
     target_compile_options(SwRast PRIVATE "/arch:AVX2") # MSVC seems to be pretty bad at inlining and SIMD
 endif()
